Se agregan imagenes a index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <body>
     <img src="images/header.jpg" alt="">
     <img src="images/hero.jpg" alt="">
+    <img src="images/clasica.jpg" alt="">
+    <img src="images/acustica.jpg" alt="">
 </body>
 
 </html>
