nueva version de invie

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
-    <img src="images/header.jpg" alt="">
-    <img src="images/hero.jpg" alt="">
-    <img src="images/clasica.jpg" alt="">
-    <img src="images/acustica.jpg" alt="">
+
+    <img src="images/nueva-version.jpg" alt="">
+
 </body>
 
 </html>
